// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`inference: application > implicit insertion > inserts implicit argument when applying explicit arg to fn with implicit param 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "?2 @ ?1",
      "String ~~ String",
    ],
    "term": "((λ(x: (?1 :: Type)) =>
  (λ(y: String) -> y : Π(y: String) -> String) : Π(x: (?1 :: Type)) =>
  Π(y: String) -> String))
  @(?2 :: ?1)
  "hello"",
    "type": "String",
  },
}
`;

exports[`inference: application > implicit insertion > inserts implicit argument when applying explicit arg to fn with implicit param 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 1,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
      {
        "implicits": [],
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 2,
        },
        "type": "resolve",
        "value": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "String",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "String",
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 2,
        },
      },
    },
    "term": {
      "arg": {
        "type": "Lit",
        "value": {
          "type": "String",
          "value": "hello",
        },
      },
      "func": {
        "arg": {
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 2,
          },
        },
        "func": {
          "ann": {
            "binding": {
              "annotation": {
                "type": "Var",
                "variable": {
                  "lvl": 0,
                  "type": "Meta",
                  "val": 1,
                },
              },
              "icit": "Implicit",
              "type": "Pi",
              "variable": "x",
            },
            "body": {
              "binding": {
                "annotation": {
                  "type": "Lit",
                  "value": {
                    "type": "Atom",
                    "value": "String",
                  },
                },
                "icit": "Explicit",
                "type": "Pi",
                "variable": "y",
              },
              "body": {
                "type": "Lit",
                "value": {
                  "type": "Atom",
                  "value": "String",
                },
              },
              "type": "Abs",
            },
            "type": "Abs",
          },
          "term": {
            "binding": {
              "annotation": {
                "type": "Var",
                "variable": {
                  "lvl": 0,
                  "type": "Meta",
                  "val": 1,
                },
              },
              "icit": "Implicit",
              "type": "Lambda",
              "variable": "x",
            },
            "body": {
              "ann": {
                "binding": {
                  "annotation": {
                    "type": "Lit",
                    "value": {
                      "type": "Atom",
                      "value": "String",
                    },
                  },
                  "icit": "Explicit",
                  "type": "Pi",
                  "variable": "y",
                },
                "body": {
                  "type": "Lit",
                  "value": {
                    "type": "Atom",
                    "value": "String",
                  },
                },
                "type": "Abs",
              },
              "term": {
                "binding": {
                  "annotation": {
                    "type": "Var",
                    "variable": {
                      "name": "String",
                      "type": "Free",
                    },
                  },
                  "icit": "Explicit",
                  "type": "Lambda",
                  "variable": "y",
                },
                "body": {
                  "type": "Var",
                  "variable": {
                    "index": 0,
                    "type": "Bound",
                  },
                },
                "type": "Abs",
              },
              "type": "Ann",
            },
            "type": "Abs",
          },
          "type": "Ann",
        },
        "icit": "Implicit",
        "type": "App",
      },
      "icit": "Explicit",
      "type": "App",
    },
    "type": {
      "type": "Lit",
      "value": {
        "type": "Atom",
        "value": "String",
      },
    },
    "typedTerms": {},
  },
}
`;

exports[`inference: application > implicit insertion > inserts implicit argument with correct type 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "Type ~~ Type",
      "?1 @ Num",
      "String ~~ String",
    ],
    "term": "((λ(x: Num) => (λ(y: String) -> y : Π(y: String) -> String) : Π(x: Num) =>
  Π(y: String) -> String))
  @(?1 :: Num)
  "hello"",
    "type": "String",
  },
}
`;

exports[`inference: application > implicit insertion > inserts implicit argument with correct type 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 1,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
      {
        "implicits": [],
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
        "type": "resolve",
        "value": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "String",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "String",
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
    },
    "term": {
      "arg": {
        "type": "Lit",
        "value": {
          "type": "String",
          "value": "hello",
        },
      },
      "func": {
        "arg": {
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 1,
          },
        },
        "func": {
          "ann": {
            "binding": {
              "annotation": {
                "type": "Lit",
                "value": {
                  "type": "Atom",
                  "value": "Num",
                },
              },
              "icit": "Implicit",
              "type": "Pi",
              "variable": "x",
            },
            "body": {
              "binding": {
                "annotation": {
                  "type": "Lit",
                  "value": {
                    "type": "Atom",
                    "value": "String",
                  },
                },
                "icit": "Explicit",
                "type": "Pi",
                "variable": "y",
              },
              "body": {
                "type": "Lit",
                "value": {
                  "type": "Atom",
                  "value": "String",
                },
              },
              "type": "Abs",
            },
            "type": "Abs",
          },
          "term": {
            "binding": {
              "annotation": {
                "type": "Var",
                "variable": {
                  "name": "Num",
                  "type": "Free",
                },
              },
              "icit": "Implicit",
              "type": "Lambda",
              "variable": "x",
            },
            "body": {
              "ann": {
                "binding": {
                  "annotation": {
                    "type": "Lit",
                    "value": {
                      "type": "Atom",
                      "value": "String",
                    },
                  },
                  "icit": "Explicit",
                  "type": "Pi",
                  "variable": "y",
                },
                "body": {
                  "type": "Lit",
                  "value": {
                    "type": "Atom",
                    "value": "String",
                  },
                },
                "type": "Abs",
              },
              "term": {
                "binding": {
                  "annotation": {
                    "type": "Var",
                    "variable": {
                      "name": "String",
                      "type": "Free",
                    },
                  },
                  "icit": "Explicit",
                  "type": "Lambda",
                  "variable": "y",
                },
                "body": {
                  "type": "Var",
                  "variable": {
                    "index": 0,
                    "type": "Bound",
                  },
                },
                "type": "Abs",
              },
              "type": "Ann",
            },
            "type": "Abs",
          },
          "type": "Ann",
        },
        "icit": "Implicit",
        "type": "App",
      },
      "icit": "Explicit",
      "type": "App",
    },
    "type": {
      "type": "Lit",
      "value": {
        "type": "Atom",
        "value": "String",
      },
    },
    "typedTerms": {},
  },
}
`;

exports[`inference: application > implicit insertion > inserts multiple implicit arguments when needed 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "?3 @ ?2",
      "?4 @ ?1",
      "String ~~ String",
    ],
    "term": "((λ(a: (?1 :: Type)) =>
  ((λ(b: (?2 :: Type)) =>
    (λ(c: String) -> c : Π(c: String) -> String) : Π(b: (?2 :: Type)) =>
    Π(c: String) -> String))
    @(?3 :: ?2) : Π(a: (?1 :: Type)) => Π(c: String) -> String))
  @(?4 :: ?1)
  "hello"",
    "type": "String",
  },
}
`;

exports[`inference: application > implicit insertion > inserts multiple implicit arguments when needed 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 2,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
      {
        "implicits": [],
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 3,
        },
        "type": "resolve",
        "value": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 1,
              "type": "Meta",
              "val": 2,
            },
          },
        },
      },
      {
        "implicits": [],
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 4,
        },
        "type": "resolve",
        "value": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "String",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "String",
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 2,
        },
      },
      "3": {
        "ann": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 1,
              "type": "Meta",
              "val": 2,
            },
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 3,
        },
      },
      "4": {
        "ann": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 4,
        },
      },
    },
    "term": {
      "arg": {
        "type": "Lit",
        "value": {
          "type": "String",
          "value": "hello",
        },
      },
      "func": {
        "arg": {
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 4,
          },
        },
        "func": {
          "ann": {
            "binding": {
              "annotation": {
                "type": "Var",
                "variable": {
                  "lvl": 0,
                  "type": "Meta",
                  "val": 1,
                },
              },
              "icit": "Implicit",
              "type": "Pi",
              "variable": "a",
            },
            "body": {
              "binding": {
                "annotation": {
                  "type": "Lit",
                  "value": {
                    "type": "Atom",
                    "value": "String",
                  },
                },
                "icit": "Explicit",
                "type": "Pi",
                "variable": "c",
              },
              "body": {
                "type": "Lit",
                "value": {
                  "type": "Atom",
                  "value": "String",
                },
              },
              "type": "Abs",
            },
            "type": "Abs",
          },
          "term": {
            "binding": {
              "annotation": {
                "type": "Var",
                "variable": {
                  "lvl": 0,
                  "type": "Meta",
                  "val": 1,
                },
              },
              "icit": "Implicit",
              "type": "Lambda",
              "variable": "a",
            },
            "body": {
              "arg": {
                "type": "Var",
                "variable": {
                  "lvl": 1,
                  "type": "Meta",
                  "val": 3,
                },
              },
              "func": {
                "ann": {
                  "binding": {
                    "annotation": {
                      "type": "Var",
                      "variable": {
                        "lvl": 1,
                        "type": "Meta",
                        "val": 2,
                      },
                    },
                    "icit": "Implicit",
                    "type": "Pi",
                    "variable": "b",
                  },
                  "body": {
                    "binding": {
                      "annotation": {
                        "type": "Lit",
                        "value": {
                          "type": "Atom",
                          "value": "String",
                        },
                      },
                      "icit": "Explicit",
                      "type": "Pi",
                      "variable": "c",
                    },
                    "body": {
                      "type": "Lit",
                      "value": {
                        "type": "Atom",
                        "value": "String",
                      },
                    },
                    "type": "Abs",
                  },
                  "type": "Abs",
                },
                "term": {
                  "binding": {
                    "annotation": {
                      "type": "Var",
                      "variable": {
                        "lvl": 1,
                        "type": "Meta",
                        "val": 2,
                      },
                    },
                    "icit": "Implicit",
                    "type": "Lambda",
                    "variable": "b",
                  },
                  "body": {
                    "ann": {
                      "binding": {
                        "annotation": {
                          "type": "Lit",
                          "value": {
                            "type": "Atom",
                            "value": "String",
                          },
                        },
                        "icit": "Explicit",
                        "type": "Pi",
                        "variable": "c",
                      },
                      "body": {
                        "type": "Lit",
                        "value": {
                          "type": "Atom",
                          "value": "String",
                        },
                      },
                      "type": "Abs",
                    },
                    "term": {
                      "binding": {
                        "annotation": {
                          "type": "Var",
                          "variable": {
                            "name": "String",
                            "type": "Free",
                          },
                        },
                        "icit": "Explicit",
                        "type": "Lambda",
                        "variable": "c",
                      },
                      "body": {
                        "type": "Var",
                        "variable": {
                          "index": 0,
                          "type": "Bound",
                        },
                      },
                      "type": "Abs",
                    },
                    "type": "Ann",
                  },
                  "type": "Abs",
                },
                "type": "Ann",
              },
              "icit": "Implicit",
              "type": "App",
            },
            "type": "Abs",
          },
          "type": "Ann",
        },
        "icit": "Implicit",
        "type": "App",
      },
      "icit": "Explicit",
      "type": "App",
    },
    "type": {
      "type": "Lit",
      "value": {
        "type": "Atom",
        "value": "String",
      },
    },
    "typedTerms": {},
  },
}
`;

exports[`inference: application > simple application f x 1`] = `
{
  "displays": {
    "constraints": [
      "Num ~~ ?1",
    ],
    "term": "((λ(x: (?1 :: Type)) -> x : Π(x: (?1 :: Type)) -> (?1 :: Type))) 1",
    "type": "?1",
  },
}
`;

exports[`inference: application > simple application f x 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
    },
    "term": {
      "arg": {
        "type": "Lit",
        "value": {
          "type": "Num",
          "value": 1,
        },
      },
      "func": {
        "ann": {
          "binding": {
            "annotation": {
              "type": "Var",
              "variable": {
                "lvl": 0,
                "type": "Meta",
                "val": 1,
              },
            },
            "icit": "Explicit",
            "type": "Pi",
            "variable": "x",
          },
          "body": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
          "type": "Abs",
        },
        "term": {
          "binding": {
            "annotation": {
              "type": "Var",
              "variable": {
                "lvl": 0,
                "type": "Meta",
                "val": 1,
              },
            },
            "icit": "Explicit",
            "type": "Lambda",
            "variable": "x",
          },
          "body": {
            "type": "Var",
            "variable": {
              "index": 0,
              "type": "Bound",
            },
          },
          "type": "Abs",
        },
        "type": "Ann",
      },
      "icit": "Explicit",
      "type": "App",
    },
    "type": {
      "type": "Neutral",
      "value": {
        "type": "Var",
        "variable": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
    },
    "typedTerms": {},
  },
}
`;
